Tests angepasst